# ---------------------------------------------------------------------------
# contrib/CMakeLists.txt
#
# Uncomment and adjust the block below to build your own executables
# against LEMON. Add as many blocks as needed.
#
# Example:
#   add_executable(myprog myprog-main.cc)
#   target_link_libraries(myprog PRIVATE LEMON::lemon)
# ---------------------------------------------------------------------------
